objects/Workstream_Task__c.object
<CustomObject>
    <description>Object to contain discrete tasks associated with a Milliman / Advisory Board workstream</description>
    <fields>
        <fullName>ABCO_Owner__c</fullName>
        <label>ABCO Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Responsible_Organization__c</fullName>
        <label>Current Responsible Organization</label>
        <picklist>
            <picklistValues>
                <fullName>Advisory Board DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisory Board Crimson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milliman</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hours_Initially_Approved__c</fullName>
        <label>Hours: Initially Approved</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Milliman_Owner__c</fullName>
        <label>Milliman Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workstream_Task_Billable_Explanation__c</fullName>
        <label>Workstream Task Billable Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Workstream_Task_Billable_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workstream Task Billable Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workstream_Task_Closed_Date__c</fullName>
        <label>Workstream Task Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Workstream_Task_Complete__c</fullName>
        <label>Workstream Task % Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Workstream_Task_Current_Due_Date__c</fullName>
        <label>Workstream Task Current Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Workstream_Task_Current_Status__c</fullName>
        <label>Workstream Task Current Status</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estimate Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estimated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Estimate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Workstream_Task_Dependency__c</fullName>
        <label>Workstream Task Dependency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workstream_Task_Notes__c</fullName>
        <label>Workstream Task Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Workstream_Task_Number__c</fullName>
        <displayFormat>Task {00000}</displayFormat>
        <label>Workstream Task Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Workstream_Task_Original_Due_Date__c</fullName>
        <label>Workstream Task Original Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Workstream_Task_Priority__c</fullName>
        <label>Workstream Task Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Workstream_Task_Recurring_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this workstream task is a task which will recur on a regular basis (such as a weekly update document creation task)</inlineHelpText>
        <label>Workstream Task Recurring Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workstream_Task_Requesting_Organization__c</fullName>
        <label>Workstream Task Requesting Organization</label>
        <picklist>
            <picklistValues>
                <fullName>ABCO - Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABCO - EHBI Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABCO - Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABCO - NPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABCO - Southwind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milliman</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Workstream_Task_Requesting_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workstream Task Requesting User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Workstream_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Workstream_Task_Top_Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this task is the current top priority within this workstream. Only one task within a workstream should be checked at a time.</inlineHelpText>
        <label>Workstream Task Top Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workstream__c</fullName>
        <label>Workstream</label>
        <referenceTo>Workstream__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Workstream_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Workstream Task</label>
    <nameField>
        <label>Workstream Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workstream Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>